syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.spbsu.datastream.core";
option java_outer_classname = "ClassLoaderService";
option objc_class_prefix = "CLS";

package helloworld;

service RemoteClassLoaderService {
    rpc findClass (ClassByteCodeRequest) returns (ClassByteCodeResponse) {}
    rpc uploadClass (ClassByteCodeUploadRequest) returns (ClassByteCodeUploadResponse) {}
}

message ClassByteCodeRequest {
    string name = 1;
}

message ClassByteCodeUploadRequest {
    string name = 1;
    bytes byteCode = 2;
    }

message ClassByteCodeResponse {
    string name = 1;
    bytes byteCode = 2;
}
message ClassByteCodeUploadResponse {
    enum Result {
        SUCCESS = 0;
        ERROR = 1;
    }
    Result result = 1;
    string message = 2;
}